070-BuildYourOwnCopilot/Coach/solutions/challenge-3/code/solution/UserPortal/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
